Service Section: alignment issues

--- a/css/services-sb.css
+++ b/css/services-sb.css
@@ -49,8 +49,8 @@
   clear: both;
 }
 .accordion__item-wrapper {
-  margin-left: -1px;
-  margin-right: -1px;
+  /* margin-left: -1px;
+  margin-right: -1px; */
   overflow: hidden;
 }
 .accordion__item {
@@ -82,6 +82,7 @@
 .accordion__item .service-acc-title-wrap {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: space-between;
   padding: 100px 0 70px;
 }
